--- a/src/app/admin-workexperience/admin-workexperience.component.html
+++ b/src/app/admin-workexperience/admin-workexperience.component.html
@@ -36,8 +36,7 @@
         <p>{{ job.accomplishments }}</p>
       </div>
       <button class="btn danger" (click)="deleteJob(job.id)">Eliminar</button>
+      <button class="btn edit" (click)="editJob(job)">Editar</button>
     </div>
   </div>
 </div>
-
-  
